--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,4 +9,4 @@
   sample application.
 </p>
 
-<%= link_to "Sign up now!", '#', class: "signup_button round" %>
+<%= link_to "Sign up now!", signup_path, class: "signup_button round" %>
